--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@font-face {
+   font-family: 'Roboto';
+   src: url(../fonts/Roboto-Regular.ttf) format('ttf');
+   font-weight: 400;
+ }
+ 
+ @font-face {
+   font-family: 'Roboto';
+   src: url(../fonts/Roboto-Medium.ttf) format('ttf');
+   font-style: italic;
+   font-weight: 500;
+ }
+ 
+ @font-face {
+   font-family: 'Roboto';
+   src: url(../fonts/Roboto-Bold.ttf) format('ttf');
+   font-weight: 700;
+ }
+
+
 * {
    box-sizing: border-box;
 }
@@ -74,9 +94,9 @@ input {
 .grid {
    display: grid;
    grid-template-areas: 
-   "my-header my-header"
-   "my-aside my-main"
-   "my-aside my-main";
+   "my-header my-header my-header"
+   "my-aside my-main my-main"
+   "my-aside my-main my-main";
    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
    gap: 8rem 0;
 }
@@ -97,12 +117,17 @@ input {
 
 .header__logo {
 font-size: 6.4rem;
+font-weight: 700;
+line-height: 117%;
+text-transform: uppercase;
 margin-right: 7rem;
 }
 
 
 .header__nav {
-   font-size: 2.4rem;
+   font-size: 2rem;
+   font-weight: 500;
+   line-height: 117%;
    margin-right: 9.2rem;
 }
 
@@ -130,6 +155,7 @@ margin-right: 7rem;
    padding-left: 1rem;
    padding-right: 4rem;
    font-size: 2rem;
+   line-height: 115%;
    color: #ffffff;
 }
 
@@ -142,12 +168,14 @@ margin-right: 7rem;
 
 .header__date {
    text-align: center;
+   line-height: 115%;
    margin-right: 8.6rem;
 }
 
 
 .header_hours {
    font-size: 2rem;
+   line-height: 117%;
 }
 
 
@@ -160,4 +188,263 @@ margin-right: 7rem;
    width: 6rem;
    height: 6rem;
    border-radius: 50%;
+}
+
+
+.main-display__trailer {
+   position: relative;
+   width: 98.5%;
+   height: 20.2rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   background: url(../img/trailer.jpg) no-repeat;
+   background-size: cover;
+   background-position: center;
+   border-radius: 1.6rem;
+   padding: 1.9rem 0 1.9rem 1.9rem;
+}
+
+
+.main-display__views {
+   font-weight: 700;
+   font-size: 1.6rem;
+   line-height: 119%;
+}
+
+
+.main-display__header {
+   font-weight: 700;
+   font-size: 1.6rem;
+   line-height: 150%;
+}
+
+
+.main-display__date {
+   font-weight: 700;
+   font-size: 1.4rem;
+   line-height: 114%;
+}
+
+
+.button-play-wrap {
+   position: absolute; /*центрируем кнопку*/
+   top: 50%; /*центрируем кнопку*/
+   left: 50%; /*центрируем кнопку*/
+   transform: translate(-50%, -50%); /*центрируем кнопку*/
+   background: rgba(255, 255, 255, 0.07);
+   width: 8.1rem;
+   height: 8.1rem;
+   border-radius: 50%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   cursor: pointer;
+}
+
+
+.button-play {
+   width: 0;
+   height: 0;
+   border-top: 1.5rem solid rgba(255, 255, 255, 0);
+   border-left: 2.5rem solid #ffffff;
+   border-bottom: 1.5rem solid rgba(255, 255, 255, 0);
+   border-radius: 0.2rem;
+}
+
+
+.title {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 3.5rem 1rem 3.5rem 0;
+}
+
+
+.title__left, .title__right {
+   display: flex;
+   align-items: center;
+}
+
+
+.title__left {
+   font-size: 2rem;
+   line-height: 115%;
+}
+
+
+.title__main {
+   font-size: 2rem;
+   line-height: 115%;
+}
+
+
+.title__count {
+   margin-left: 2rem;
+   color: rgba(255, 255, 255, 0.2);
+}
+
+
+.title__right span{
+   font-size: 1.4rem;
+   line-height: 114%;
+   color: rgba(255, 255, 255, 0.2);
+}
+
+
+.title__right img {
+   margin-left: 0.4rem;
+   width: 2rem;
+   height: 1.6rem;
+}
+
+
+.trending, .popular{
+   display: flex;
+   justify-content: space-between;
+   padding-right: 1.6rem;
+}
+
+
+.trending__item {
+   position: relative;
+   display: flex;
+   align-items: flex-end;
+   width: 47%;
+   height: 25.1rem;
+   border-radius: 1.6rem;
+   background: linear-gradient(rgba(0, 0, 0, 0.4),
+   rgba(0, 0, 0, 0.4)), url(../img/trading-item-back.jpg) no-repeat ;
+   background-size: cover;
+   background-position: center;
+}
+
+
+.trending__header {
+   font-size: 1.5rem;
+   font-weight: 700;
+   line-height: 150%;
+}
+
+
+.trending__footer, .popular__footer {
+   position: relative;
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 1.8rem 1rem 1.8rem 6.4rem;
+   border-radius: 1.6rem;
+   background: rgba(255, 255, 255, 0.3);
+   filter: brightness(100%);
+}
+
+
+.popular__footer {
+   background: rgba(255, 255, 255, 0.4);
+   padding: .8rem 1.9rem .8rem 6.4rem;
+}
+
+
+.trending__date {
+   font-weight: 700;
+   font-size: 1rem;
+   line-height: 120%;
+}
+
+
+.trending__time {
+background: #ffffff;
+color: #000000;
+border-radius: 1.6rem;
+padding: .4rem 1.3rem;
+font-size: 1.4rem;
+line-height: 114%;
+}
+
+
+.trending__plash {
+   position: absolute;
+   top: 2rem;
+   left: 2rem;
+   font-size: 1.4rem;
+   line-height: 114%;
+   background: rgba(255, 255, 255, 0.3);
+   padding: .4rem 1.5rem; 
+   border-radius: 1.3rem;
+}
+
+
+.small {
+   width: 4rem;
+   height: 4rem;
+   left: 7%;
+}
+
+
+.small-plus {
+   width: 3rem;
+   height: 3rem;
+   left: 7%;
+}
+
+
+.button-play-wrap.small .button-play { /* вреп внутри у него,рядом стоит смол, а внутри вложенность баттон плей */
+   width: 0;
+   height: 0;
+   border-top: 1rem solid rgba(255, 255, 255, 0);
+   border-left: 1.5rem solid #ffffff;
+   border-bottom: 1rem solid rgba(255, 255, 255, 0);
+   border-radius: 0.2rem;
+}
+
+
+.button-play-wrap.small-plus .button-play { /* вреп внутри у него,рядом стоит смол, а внутри вложенность баттон плей */
+   width: 0;
+   height: 0;
+   border-top: 0.5rem solid rgba(255, 255, 255, 0);
+   border-left: 1rem solid #ffffff;
+   border-bottom: 0.5rem solid rgba(255, 255, 255, 0);
+   border-radius: 0.2rem;
+}
+
+
+.popular__item {
+   display: flex;
+   align-items: flex-end;
+   width: 30%;
+   height: 19.2rem;
+   border-radius: 1.6rem;
+   background: linear-gradient(rgba(0, 0, 0, 0.4),
+   rgba(0, 0, 0, 0.4)), url(../img/popular-item-back.jpg) no-repeat;
+   background-size: cover;
+   background-position: center;
+}
+ 
+
+.popular__header {
+   font-weight: 700;
+   font-size: 1rem;
+   line-height: 120%;
+}
+
+
+.popular__date {
+   font-weight: 700;
+   font-size: .8rem;
+   line-height: 113%;
+}
+
+
+.popular__rating {
+   display: flex;
+   align-items: center;
+}
+
+
+.popular__rating span {
+   font-weight: 700;
+   font-size: 1rem;
+   line-height: 120%;
+   margin-left: .4rem;
 }
