--- a/css/style.css
+++ b/css/style.css
@@ -448,3 +448,186 @@ line-height: 114%;
    line-height: 120%;
    margin-left: .4rem;
 }
+
+
+.aside {
+   padding-right: 5.9rem;
+}
+
+
+.aside__title {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   margin-bottom: 2.6rem;
+}
+
+.aside__sort {
+   display: flex;
+}
+
+
+.aside__sort-img {
+   display: flex;
+   flex-direction: column;
+   margin-left: 0.4rem;
+}
+
+
+.aside__sort-img img {
+   width: 0.7rem;
+   height: 0.7rem;
+   cursor: pointer;
+}
+
+
+.aside__sort-img img:nth-child(1) {
+   margin-bottom: .3rem;
+}
+
+
+.aside__header {
+   font-size: 2rem;
+   line-height: 115%;
+}
+
+
+.aside__sort-text {
+   margin-right: 1.5rem;
+   font-size: 1.4rem;
+   line-height: 114%;
+   color:rgba(255, 255, 255, 0.4);
+}
+
+
+.aside__sort-select {
+   display: flex;
+   align-items: center;
+}
+
+
+.aside__sort-select span {
+   font-size: 1.4rem;
+   line-height: 114%;
+}
+
+
+.aside__item {
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   height: 22.6rem;
+   border-radius: 1.5rem;
+   padding: 1.9rem 0 1.9rem 1.9rem;
+   background: linear-gradient(rgba(0, 0, 0, 0.4),
+   rgba(0, 0, 0, 0.4)), url(../img/aside.jpg) no-repeat;
+   background-size: cover;
+   background-position: center;
+}
+
+.aside__item:nth-child(3) {
+   margin-top: 3rem;
+   margin-bottom: 4rem;
+}
+
+
+.aside__views {
+   position: relative;
+   font-weight: 700;
+   font-size: 1.6rem;
+   line-height: 119%;
+   z-index: 10;
+}
+
+
+.aside__item-name {
+   margin-bottom: 0.5rem;
+   font-weight: 700;
+   font-size: 2.4rem;
+   line-height: 117%;
+}
+
+
+
+.aside__item-date {
+   font-weight: 700;
+   font-size: 1.4rem;
+   line-height: 114%;
+}
+
+
+.aside__bottom {
+   padding: 2.5rem 0 2rem 0;
+   background:rgba(255, 255, 255, 0.02);
+}
+
+
+.aside__favourite-text {
+   margin-bottom: 2rem;
+   font-size: 2rem;
+   line-height: 115%;
+}
+
+
+.aside__genre-items {
+   display: flex;
+   flex-wrap: wrap;
+   align-content: space-between;
+   padding-right: 5rem;
+}
+
+
+.aside__genre {
+   margin-bottom: 2rem;
+   margin-right: 3rem;
+   padding: .5rem 1rem;
+   border-radius: 3rem;
+   font-size: 1.2rem;
+   line-height: 117%;
+}
+
+
+.perple {
+   background: #8066F6;
+}
+
+
+.orange {
+   background: #E1784F;
+}
+
+
+.green {
+   background: #64CFE1;
+}
+
+
+.gray {
+   background: #2B2A2F;
+}
+
+
+.aside__favourite  {
+   margin-bottom: 6rem;
+}
+
+
+.aside__add {
+   display: flex;
+   margin-bottom: 2rem;
+   font-size: 1.4rem;
+   line-height: 114%;
+}
+
+
+.aside__add-round {
+   width: 1.8rem;
+   height: 1.8rem;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background-color: #2B2A2F;
+   margin-right: 0.5rem;
+}
