feat: add functional to buttons

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,14 @@ input {
 
 
 .header {
+   box-shadow: 0rem 0.4rem 1rem rgba(255, 255, 255, 0.07);
    grid-area: my-header;
+}
+
+
+
+.main-display {
+   padding-top: 5rem;
 }
 
 
@@ -98,7 +105,7 @@ input {
    "my-aside my-main my-main"
    "my-aside my-main my-main";
    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
-   gap: 8rem 0;
+   gap: 3em 0;
 }
 
 
@@ -451,7 +458,38 @@ line-height: 114%;
 
 
 .aside {
+   position: relative;
    padding-right: 5.9rem;
+}
+
+
+.aside:after {
+   content: url('../img/Polygon\ 4.svg');
+   display: flex;
+   position: absolute;
+   top: 10.7rem;
+   right: 4.7rem;
+   justify-content: center;
+   align-items: center;
+   width: 2.2rem;
+   height: 2.6rem;
+   background: #FCFCFE;
+   border-radius: 2rem;
+}
+
+
+.aside__wrap {
+ background: rgba(255, 255, 255, 0.2);  
+ margin-left: -2.4rem;
+}
+
+
+.aside__top {
+   padding-top: 5rem;
+   padding-right: 2.3rem;
+   padding-bottom: 4rem;
+   background: #171618;
+   border-right: 0.1rem solid #1C1B1F;
 }
 
 
@@ -528,7 +566,6 @@ line-height: 114%;
 
 .aside__item:nth-child(3) {
    margin-top: 3rem;
-   margin-bottom: 4rem;
 }
 
 
@@ -540,6 +577,23 @@ line-height: 114%;
    z-index: 10;
 }
 
+
+.aside__footer-bottom {
+   position: relative;
+}
+
+
+.aside__footer-bottom::before {
+   position: absolute;
+   content: '';
+   display: block;
+   width: 6.5rem;
+   height: 0.1rem;
+   background-color: rgba(255, 255, 255, 0.2);
+   top:-50%;
+   left: 0;
+   transform: translate(0, -20%);
+}
 
 .aside__item-name {
    margin-bottom: 0.5rem;
@@ -558,8 +612,8 @@ line-height: 114%;
 
 
 .aside__bottom {
-   padding: 2.5rem 0 2rem 0;
-   background:rgba(255, 255, 255, 0.02);
+   padding: 2.5rem 0 2rem 2.4rem;
+   background: rgba(255, 255, 255, 0.02);
 }
 
 
@@ -631,3 +685,33 @@ line-height: 114%;
    background-color: #2B2A2F;
    margin-right: 0.5rem;
 }
+
+
+.modal {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   overflow-x: hidden;
+   overflow-y: auto;
+   background-color: rgba(0, 0, 0, 0.5);
+   padding: 3rem 0;
+   z-index: 100;
+   display: none;
+}
+
+
+.modal__inner {
+   width: 100rem;
+   height: 60rem;
+}
+
+
+.active {
+   display: flex;
+}
+
